GNU mailutils NEWS -- history of user-visible changes. 2009-07-12
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 
2008, 2009 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.


Version 2.0.90 (Git)

* Ticket files

All MU client utilities make use of the user ticket file,
~/.mu-tickets, if it is present.

* Imap4d

New configuration file entities allow to modify user's personal
namespace and visible home directory.

* Movemail

When called with the `--uidl' command line option, the utility tries
to avoid copying the message if a message with the same UIDL already
exists in the destination mailbox.

The `--verbose' command line option enables outputting additional
information.

* Mail

** The -f option

The semantics of -f (--file) option fully complies to the POSIX
standard. Namely, this option instructs mail to read messages
from the file named by the first non-optional command line
argument. Therefore, the following four usage patterns are
entirely equivalent:

  mail -fin mymbox
  mail -f mymbox -in
  mail --file -in mymbox
  mail --file -i mymbox -n

In addition, the form

  mail --file=mymbox

is also allowed.  

** The -F option

The -F option (record outgoing messages in a file named after the
first recipient) is implemented.

** error locations

Diagnostic messages issued while processing `source' command
include file locations, in compliance with the GNU standards. This
also includes diagnostics issued during processing of the
system or user configuration file.

** envelope command

The env[elope] command displays the SMTP envelopes of the messages
given as its arguments.

** variable command

The va[riable] command describes the known internal mail variables.
When used with arguments, only variables named in the command line are
described.

For each variable, this command prints its name, data type, current
value and a short description.

** showenvelope variable
