@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2009-07-12
+GNU mailutils NEWS -- history of user-visible changes. 2009-07-13
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 
 2008, 2009 Free Software Foundation, Inc.
 See the end of file for copying conditions.
@@ -52,6 +52,15 @@ is also allowed.
 
 The -F option (record outgoing messages in a file named after the
 first recipient) is implemented.
+
+** struct command
+
+The st[ruct] command allows to list message MIME structures, e.g.:
+
+& struct 2
+2[1]  text/plain                 513
+2[2]  application/octal-stream  247K
+2[3]  text/x-diff                31K
 
 ** error locations
 
